# velin

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  typecheck_output.txt  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_issue.yml  config.yml  documentation_issue.yml  feature_request.yml  performance_issue.yml  platform_issue.yml  ui_ux_improvement.yml
.github/workflows/: pr.yml  publish.yml
scripts/: download-pdfium.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_output.txt  test_output_utf8.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  reader.rs  tools.rs
src-tauri/src/pdf/: backend.rs  document.rs  manager.rs  mod.rs
src-tauri/src/pdf/reader/: metadata.rs  mod.rs  render.rs  text.rs  text_old.rs
src-tauri/src/pdf/reader/annotation/: annotations.rs  mod.rs
src-tauri/src/pdf/reader/text/: mod.rs  search.rs  selection.rs
src-tauri/src/pdf/tools/: compress.rs  extract.rs  image.rs  image_to_pdf.rs  merge.rs  mod.rs  protect.rs  rotate.rs  split.rs  unlock.rs  watermark.rs
src-tauri/src/pdf/worker/: event.rs  mod.rs  worker.rs
src-tauri/src/service/: mod.rs  reader_service.rs  tools_service.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/utils/page_selection/: error.rs  mod.rs  parser.rs  selection.rs
src/app/: App.tsx  ScreenRouter.tsx  index.ts  screen.ts  screens.registry.ts  styles.css
src/dialog/: index.ts
src/screens/: index.ts  (+1 more)
(+268 files in other folders)
