[package]
name = "velin"
version = "0.3.0"
description = "A fast, lightweight PDF reader built with Tauri and Rust, optimized for large documents."
authors = ["you"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "velin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
pdfium-render = "0.8.37"
tokio = "1.48.0"
parking_lot = "0.12.5"
flume = "0.12.0"
tauri-plugin-devtools = "2.0.0"
once_cell = "1.21.3"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
image = "0.25.9"
tauri-plugin-http = "2.5.7"
tar = "0.4.44"
flate2 = "1.1.9"

[dependencies.uuid]
version = "1.19.0"
features = ["v4"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
